--- a/pipeline.yml
+++ b/pipeline.yml
@@ -1,18 +1,27 @@
 ---
-# Resourceの定義
 resources:
-# Git Resourceの定義
 - name: hello
   type: git
   source:
     uri: https://github.com/takuma02141978/concouseci-firststep.git
+- name: result
+  type: git
+  source:
+    uri: git@gist.github.com:05af8dee730244bd1331936d9eb2e93d.git
+    private_key: {{github-private-key}}
+    branch: master
 
-# Jobの定義
 jobs:
-- name: hello-job
-  public: true # UI上でJobの結果をログイン不要で公開するかどうか
+- name: job-hello
+  public: true
   plan:
   - get: hello
-    trigger: true # Resourceに変更があれば自動でジョブを実行するかどうか
+    trigger: true
+  - get: result
   - task: run-hello
     file: hello/hello.yml
+  - task: commit-log
+    file: hello/commit-log.yml
+  - put: result
+    params:
+      repository: updated-result
